--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>DiepioRoo</title>
     <script type="text/javascript" src="lib/phaser.min.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="gameState.js"></script>
 </head>
-<body>
+<body style="background-color: lightgray">
     <h1 style="text-align: center;color:#2eb82e">Welcome to DiepioRoo...</h1>
     <div id="gameDiv"></div>
 </body>
