--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="lib/phaser.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="gameState.js"></script>
+    <script type="text/javascript" src="player.js"></script>
 </head>
 <body style="background-color: lightgray">
     <h1 style="text-align: center;color:#2eb82e">Welcome to DiepioRoo...</h1>
