--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <title>DiepioRoo</title>
     <script type="text/javascript" src="lib/phaser.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
-    <script type="text/javascript" src="gameState.js"></script>
-    <script type="text/javascript" src="player.js"></script>
+    <script type="text/javascript" src="GameState.js"></script>
+    <script type="text/javascript" src="Player.js"></script>
+    <script type="text/javascript" src="HealthBar.js"></script>
 </head>
 <body style="background-color: lightgray">
     <h1 style="text-align: center;color:#2eb82e">Welcome to DiepioRoo...</h1>
