Start to add enemies.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script type="text/javascript" src="GameState.js"></script>
     <script type="text/javascript" src="Player.js"></script>
     <script type="text/javascript" src="HealthBar.js"></script>
+    <script type="text/javascript" src="Enemy.js"></script>
+    <script type="text/javascript" src="EnemyGroup.js"></script>
 </head>
 <body style="background-color: lightgray">
     <h1 style="text-align: center;color:#2eb82e">Welcome to DiepioRoo...</h1>
